--- a/irteus/Makefile
+++ b/irteus/Makefile
@@ -42,7 +42,7 @@ MODULES.L=irt_modules.l
 EUSLIB_MODULES.L=$(addprefix $(EUSDIR)/lib/,$(MODULES.L))
 
 IRTEUS=irtmath irtutil irtgraph pgsql
-IRTEUSG=irtgeo pqp irtscene irtmodel irtsensor irtdyna irtrobot irtbvh irtcollada irtpointcloud
+IRTEUSG=irtgeo pqp irtscene irtmodel irtsensor irtdyna irtrobot irtbvh irtcollada irtpointcloud irtstl irtwrl
 IRTEUSX=irtx
 IRTEUSIMG=irtimage eusjpeg png
 IRTEUSGL=irtgl irtglrgb irtviewer
@@ -176,6 +176,8 @@ $(INSTALLOBJDIR)/irtscene.$(OSFX): irtscene.l
 $(INSTALLOBJDIR)/irtmodel.$(OSFX): irtmodel.l
 $(INSTALLOBJDIR)/irtdyna.$(OSFX): irtdyna.l
 $(INSTALLOBJDIR)/irtcollada.$(OSFX): irtcollada.l
+$(INSTALLOBJDIR)/irtstl.$(OSFX): irtstl.l
+$(INSTALLOBJDIR)/irtwrl.$(OSFX): irtwrl.l
 $(INSTALLOBJDIR)/irtsensor.$(OSFX): irtsensor.l
 $(INSTALLOBJDIR)/irtpointcloud.$(OSFX): irtpointcloud.l
 $(INSTALLOBJDIR)/irtrobot.$(OSFX): irtrobot.l
